# timaru

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: stable.yml
src/: cli.rs  error.rs  lib.rs  main.rs  schedule.rs  task.rs
src/database/: fs.rs  mod.rs  parser.rs  setup.rs
src/database/parser/: from_string.rs  mod.rs  to_string.rs
src/parser/: from_string.rs  to_string.rs
timaru/: .gitignore  Cargo.toml
timaru/src/: cli.rs  error.rs  lib.rs  log.rs  schedule.rs  setup.rs  task.rs
timaru/src/parser/: from_string.rs  mod.rs
timaru/src/tui/: format.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
