[package]
name = "timaru"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", features = ["crossterm"] }
crossterm = "0.19.0"
clap = "3.0.0-beta.2"
nom = "6.1.2"
chrono = "0.4.19"
thiserror = "1.0.24"
termion = "*"
